--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@
             <div class="hero-content">
                 <h1>Women in Tech</h1>
                 <p>We're a collaborative community working together to tackle the tech gender gap. Join to find a supportive women in tech network, opportunities, jobs, and guidance so you can excel in your tech career.</p>
-                <button class="cta-button" onclick="alert('Welcome! More features coming soon.')">START YOUR STORY</button>
+                <a href="{{ url_for('blog') }}" class="cta-button">START YOUR STORY</a>
             </div>
         </div>
         <div class="hero-right">
